force-app/main/default/objects/RV_Valve_ControlPlan_Details__c/fields/Data_Point__c.field-meta.xml
<CustomField>
    <fullName>Data_Point__c</fullName>
    <label>Data Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>