force-app/main/default/objects/RV_Valve_ControlPlan_Details__c/fields/DATA_TYPE__c.field-meta.xml
<CustomField>
    <fullName>DATA_TYPE__c</fullName>
    <label>DATA_TYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>