force-app/main/default/objects/RV_Valve_ControlPlan_Details__c/fields/INNER_MAX__c.field-meta.xml
<CustomField>
    <fullName>INNER_MAX__c</fullName>
    <label>INNER_MAX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>