force-app/main/default/objects/RV_Valve_ControlPlan_Details__c/fields/OUTER_MAX__c.field-meta.xml
<CustomField>
    <fullName>OUTER_MAX__c</fullName>
    <label>OUTER_MAX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>