force-app/main/default/objects/RV_Valve_ControlPlan_Details__c/fields/Process_Characteristic__c.field-meta.xml
<CustomField>
    <fullName>Process_Characteristic__c</fullName>
    <label>Process Characteristic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>