force-app/main/default/objects/RV_Valve_ControlPlan_Details__c/fields/SQLKEY__c.field-meta.xml
<CustomField>
    <fullName>SQLKEY__c</fullName>
    <externalId>true</externalId>
    <label>SQLKEY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>