force-app/main/default/objects/RV_Valve_ControlPlan_Details__c/fields/Text5Val__c.field-meta.xml
<CustomField>
    <fullName>Text5Val__c</fullName>
    <label>Text5Val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>