force-app/main/default/objects/RV_Valve_ControlPlan_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Test_OPNO__c</columns>
    <columns>TEST_OPERATION_DESC__c</columns>
    <columns>OUTER_MAX__c</columns>
    <columns>OUTER_MIN__c</columns>
    <columns>Operation_Number__c</columns>
    <columns>NOMINAL_VALUE__c</columns>
    <columns>Text1Val__c</columns>
    <columns>Text2Val__c</columns>
    <columns>Text3Val__c</columns>
    <columns>Text4Val__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Test_OPNO__c</field>
        <operation>equals</operation>
        <value>8130</value>
    </filters>
    <label>All</label>
</ListView>